--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,5 +13,6 @@ COPY package*.json ./
 RUN npm ci --only=production
 COPY --from=builder /app/dist ./dist
 RUN npm install -g pm2
+COPY ecosystem.config.js .
 EXPOSE 4000
 CMD ["pm2-runtime", "dist/main.js"]
