--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - "${POSTGRES_PORT}:5432"
     networks:
       - db-network
+    restart: always
 
   backend:
     build:
@@ -33,6 +34,7 @@ services:
       - database
     networks:
       - db-network
+    restart: always
 
   frontend:
     build:
@@ -42,6 +44,7 @@ services:
       - "8081:80"
     networks:
       - db-network
+    restart: always
 
 volumes:
   postgres_data:
